# Rubber-Mixer-Machine

./: GccApplication10.atsln  README.md  flowsensor.h  main.c
NImz/: keypad.pdsprj
NImz/KeyPad/: Int_ToASCI.txt
NImz/KeyPad Fking Last/: Int_ToASCI.txt
NImz/PH with 1 pin/: PH.atsln  project01_32.pdsprj  protoues.pdsprj
NImz/pH Sensor Fking Last/: Ph sensor.atsln  ph sensor simulation.pdsprj  ph sensor simulation.pdsprj.NES-NIMASH.User.workspace
NImz/pH Sensor with 3 pins/: ph sensor simulation.pdsprj.NES-NIMASH.User.workspace
PCB and schematic/Milan - pcb/: Milan.dsn  Milan.kicad_pcb  Milan.kicad_prl  Milan.kicad_pro  Milan.rules  Milan.ses  fp-lib-table
PCB and schematic/final pcb/: final pcb.kicad_pcb  final pcb.kicad_prl  final pcb.kicad_pro  final pcb.kicad_sch  fp-info-cache
PCB and schematic/gith - pcb/: githmi_ir_steppersnew.kicad_pcb  (+4 more)
Proteus Files/: Final Project.pdsprj  Final Project.pdsprj.KRAKEN.Admin.workspace  New Project.pdsprj.KRAKEN.Admin.workspace  Pin diadram of the project CORRECT.pdsprj  Pin diadram of the project CORRECT.pdsprj.KRAKEN.Admin.workspace  gruop fixing.pdsprj.KRAKEN.Admin.workspace  pin diagram.pdsprj.KRAKEN.Admin.workspace
test2/: CMakeLists.txt  Stepper_motors.h  ToRelay.h  adc.c  adc.h  dc.h  flowsensor.c  flowsensor.h  keypad.c  keypad.h  keypad2.c  keypad2.h  keypad4x3.c  keypad4x3.h  keypadconfig.h  lcd_func.h  main.c  sensor.h  solenoid.c  solenoid.h  test2.cproj  ultrasonic.c  ultrasonic.h
test2/Debug/: Makefile  adc.d  flowsensor.d  main.d  makedep.mk  test2.elf  test2.hex  test2.lss  test2.map  test2.srec
(+153 files in other folders)
